--- a/conduct.html
+++ b/conduct.html
@@ -126,7 +126,7 @@
     <div class="form-section">
       <h2>Inscription Conducteur</h2>
 
-      <form action="registerconduct.php" method="POST" enctype="multipart/form-data">
+      <form action="traitement.php" method="POST" enctype="multipart/form-data">
         <label>Nom :</label>
         <input type="text" name="nom" required>
 
