modification Reserver.html Taxi.html Voirprix.html choix_prins.html conduct.html rejoinfretrajet.php et usersconnect.php

--- a/Reserver.html
+++ b/Reserver.html
@@ -82,7 +82,7 @@
         <span>Taxi</span>
       </a>
 
-      <a href="covoiturage.html" class="option">
+      <a href="choix.php" class="option">
         <img src="https://cdn-icons-png.flaticon.com/512/1532/1532998.png" alt="Covoiturage">
         <span>Covoiturage</span>
       </a>
