--- a/Taxi.html
+++ b/Taxi.html
@@ -69,15 +69,15 @@
     <div class="logo">ASIH</div>
     <div class="right-menu">
         <button>🌍 FR</button>
-        <a href="FAQ.php">FAQ</a>
-        <a href="login.php">Se connecter</a>
+        <a href="FAQ.html">FAQ</a>
+        <a href="login.html">Se connecter</a>
         <a href="register.php" class="signup">S’inscrire</a>
     </div>
 </header>
 
 <div class="container">
     <h3>Commandez ou planifiez un taxi</h3>
-    <form action="Voirprix.php" method="post">
+    <form action="Voirprix.html" method="post">
         <input type="text" name="depart" placeholder="Lieu de départ" required>
         <input type="text" name="destination" placeholder="Destination" required>
         <button type="submit" class="voir-prix">Voir prix</button>
