--- a/Voirprix.html
+++ b/Voirprix.html
@@ -55,8 +55,8 @@
     <div class="logo">ASIH</div>
     <div class="right-menu">
         <button class="lang">🌍 FR</button>
-        <a href="FAQ.php">FAQ</a>
-        <a href="login.php">Se connecter</a>
+        <a href="FAQ.html">FAQ</a>
+        <a href="login.html">Se connecter</a>
         <a href="register.php" class="signup">S’inscrire</a>
     </div>
 </header>
