--- a/choix_prins.html
+++ b/choix_prins.html
@@ -26,29 +26,6 @@
             z-index: -1;
         }
 
-        header {
-            background: black;
-            color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 20px;
-        }
-
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .right-menu a, .right-menu button {
-            color: white;
-            text-decoration: none;
-            margin-left: 15px;
-            font-weight: bold;
-            background: none;
-            border: none;
-            cursor: pointer;
-        }
 
         h2 {
             margin-top: 20px;
@@ -108,8 +85,8 @@
     <div class="logo">ASIH</div>
     <div class="right-menu">
         <button class="lang">🌍 FR</button>
-        <a href="FAQ.php">FAQ</a>
-        <a href="login.php">Se connecter</a>
+        <a href="FAQ.html">FAQ</a>
+        <a href="login.html">Se connecter</a>
         <a href="register.php" class="signup">S’inscrire</a>
     </div>
 </header>
@@ -122,7 +99,7 @@
 
 <div class="options">
     <div class="option">
-        <a href="Taxi.php">Taxi</a>
+        <a href="Taxi.html">Taxi</a>
     </div>
     <div class="option">
         <a href="choix.php">Covoiturage</a>
