--- a/conduct.html
+++ b/conduct.html
@@ -161,7 +161,7 @@
     <div class="login-section">
       <h2>Déjà enregistré ?</h2>
       <p>Vous êtes déjà enregistré en tant que chauffeur ?<br> Connectez-vous à votre compte</p>
-      <a href="login.php">
+      <a href="login.html">
         <button>Connexion</button>
       </a>
     </div>
