modification de Accueil.html choix_prins.html conduct.html createtrajet.php FAQ.html register.php rejoindretrajet.php et userconnect.php suppression de covoiturage.sql Reserver.html et de login.html ajout de covoiturage (1).sql et de login.php

--- a/FAQ.html
+++ b/FAQ.html
@@ -15,8 +15,8 @@
     <div class="right-menu">
       <button class="lang">🌍 FR</button>
       <a href="FAQ.html">FAQ</a>
-      <a href="login.html">Se connecter</a>
-      <a href="login.html"class="signup">S’inscrire</a>
+      <a href="login.php">Se connecter</a>
+      <a href="register.php"class="signup">S’inscrire</a>
     </div>
   </header>
 <body>
