--- a/choix_prins.html
+++ b/choix_prins.html
@@ -86,7 +86,7 @@
     <div class="right-menu">
         <button class="lang">🌍 FR</button>
         <a href="FAQ.html">FAQ</a>
-        <a href="login.html">Se connecter</a>
+        <a href="login.php">Se connecter</a>
         <a href="register.php" class="signup">S’inscrire</a>
     </div>
 </header>
